<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <EditText
            android:id="@+id/startDateInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_start_date"
            android:focusable="false"
            android:clickable="true"
            android:padding="8dp" />

        <EditText
            android:id="@+id/endDateInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_end_date"
            android:focusable="false"
            android:clickable="true"
            android:padding="8dp" />

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/calculate_totals" />

        <ListView
            android:id="@+id/categoryListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>
</ScrollView>
